# hiPerk

./: README.md  implementation.md  package-lock.json  package.json  plan.md  skills-lock.json  speech.txt  test-live.sh
.agents/skills/boundless/: SKILL.md
.claude/: settings.json
backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
backend/prover/: Cargo.toml  README.md
backend/prover/host/: Cargo.toml
backend/prover/host/src/: main.rs
backend/prover/methods/guest/: Cargo.toml
backend/prover/methods/guest/src/: main.rs
backend/scripts/: smoke.ts
backend/src/: config.ts  index.ts
backend/src/models/: store.ts  types.ts
backend/src/routes/: claims.ts  github.ts  modules.ts
backend/src/services/: feeBumpRelayer.ts  githubVerification.ts  groqAnalysis.ts  riscZeroProver.ts  stellarClient.ts  x402Payment.ts
blockchain/: .gitignore  Cargo.toml  README.md  output.json
blockchain/contracts/gatekeeper/: Cargo.toml
blockchain/contracts/gatekeeper/src/: lib.rs  test.rs
blockchain/contracts/perk/: Cargo.toml
blockchain/contracts/perk/src/: lib.rs  test.rs
blockchain/scripts/: deploy.sh  invoke.sh
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: Decorations.tsx  PageShell.tsx  TopNav.tsx
frontend/src/lib/: api.ts  freighter.ts  store.ts
frontend/src/routes/: __root.tsx  claim.$id.tsx  dashboard.tsx  index.tsx  my-claims.tsx  onboarding.tsx  review.tsx  submit-proof.tsx
(+10 files in other folders)
